 * sound:
   * timer bell in MP starts when there are 20 seconds left and fades in
     gradually for 10 seconds (fr #10559)
   * fixed timer bell not always playing (bug #10559)
   * it was possible to add the same track to the playlist twice which
     could lead to an infinite loop (bug #10112)
 * user interface
   * the apple key works as shortcut modifier again (bug #10586)
 * WML engine:
   * Fixed a problem where two [recall]s in a SP game could get an out of sync
     recruitment
   * avoid triggering an assertion when a duplicated side definition exists
     (bug #7252)
 * miscellaneous and bug fixes:
   * when loading a unit some traits didn't get applied correctly but got
     fixed in a later state. This could lead to some units not leveling 
     properly (bug #10304)
   * validate vector access for colours (bug #10622)
   * Fixed OOS on unit advancement if wml had battle/die events (bug #10590)
   * added serveral fixes to compile with Sun Studio compiler (patch #911)
   * bumped autoconf version requirement to 2.61 since it's needed for the
     boost tests (bug #10636)

Version 1.3.13:
 * campaigns:
   * A Tale of Two Brothers:
     * what the correct passwords for 'Guarded Castle' are is now randomized
   * Liberty:
     * 'Hide and Seek' mostly rewritten and it now has a bigger map with
       randomly placed guards
   * The South Guard:
     * now the player has to kill the fake M'Brin in 'Choice in the Fog' instead
       of just attacking once
 * language and i18n:
   * updated translations: Chinese, Czech, Danish, Finnish, French, German,
     Greek, Hungarian, Italian, Lithuanian, Polish, Portuguese (Brazil),
     Valencian
   * updated DejaVuSans to 2.22
 * map editor:
   * resize actions can be undone again (bug #10216)
 * multiplayer:
   * revised maps: Hamlets
   * recruitment OOS is fatal now (bug #9723)
   * the server now stores the next scenario send but the host, thus the
     clients no longer restart in the previous scenario